argocd-web-app-routing-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - #ArgoCD domain name for the SSL cert 
      secretName: argocd-tls  # Uses your existing TLS secret
  rules:
    - host: #ArgoCD domain name for the SSL cert
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
